--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,12 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-masonry-css": "^1.0.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
