--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-stopwatch": "^2.0.4",
     "react-swipeable-views": "^0.13.9",
     "web-vitals": "^0.2.4"
   },
