--- a/package.json
+++ b/package.json
@@ -8,24 +8,25 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
-    "firebase": "^8.0.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "draft-js": "^0.11.7",
-    "jquery": "^3.5.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "react-bootstrap": "^1.4.0",
     "ckeditor4-react": "^1.2.1",
-    "react-stopwatch": "^2.0.4",
+    "draft-js": "^0.11.7",
+    "firebase": "^8.0.2",
+    "jquery": "^3.5.1",
+    "mdbreact": "^4.27.0",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^5.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-masonry-css": "^1.0.14",
-    "styled-components": "^5.2.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "react-stopwatch": "^2.0.4",
     "react-swipeable-views": "^0.13.9",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
