--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "ckeditor4-react": "^1.2.1",
+    "clsx": "^1.1.1",
     "draft-js": "^0.11.7",
     "firebase": "^8.0.2",
     "jquery": "^3.5.1",
