--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-infinite-scroll-component": "^5.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-masonry-css": "^1.0.14",
+    "react-quill": "^1.3.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
