--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "draft-js": "^0.11.7",
     "firebase": "^8.0.2",
     "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mdbreact": "^4.27.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
@@ -21,6 +22,7 @@
     "react-infinite-scroll-component": "^5.1.0",
     "react-infinite-scroller": "^1.2.4",
     "react-masonry-css": "^1.0.14",
+    "react-materialize": "^3.9.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
