--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react-swipeable-routes": "^0.8.0",
     "clsx": "^1.1.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -29,6 +30,7 @@
     "react-scripts": "4.0.0",
     "react-stopwatch": "^2.0.4",
     "react-swipeable-views": "^0.13.9",
+    "react-quill": "^1.3.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
