--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-swipeable-routes": "^0.8.0",
-    "clsx": "^1.1.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.6",
@@ -13,6 +11,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "ckeditor4-react": "^1.2.1",
+    "clsx": "^1.1.1",
     "draft-js": "^0.11.7",
     "firebase": "^8.0.2",
     "jquery": "^3.5.1",
@@ -25,12 +24,14 @@
     "react-infinite-scroller": "^1.2.4",
     "react-masonry-css": "^1.0.14",
     "react-materialize": "^3.9.3",
+    "react-quill": "^1.3.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-stopwatch": "^2.0.4",
+    "react-swipeable-routes": "^0.8.0",
     "react-swipeable-views": "^0.13.9",
-    "react-quill": "^1.3.5",
+    "simple-react-comments": "^1.1.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
