--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mdbreact": "^4.27.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.2.1",
     "react-dom": "^17.0.1",
     "react-infinite-scroll-component": "^5.1.0",
     "react-infinite-scroller": "^1.2.4",
